@@ -86,6 +86,9 @@ CHANGES - Current Version:
 - Avoid unnecessary cloning of features in IMapInfoFile::GetNextFeature() and
   IMapInfoFile::GetFeature().
 
+- Added TABText::Get/SetTextLineEndPoint() and properly read/write label
+  line end point in TAB files.
+
 
 Version 1.0.4 - (2000-11-14)
 ----------------------------
@@ -275,5 +278,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.46 2001-02-27 19:59:05 daniel Exp $
+$Id: HISTORY.TXT,v 1.47 2001-02-28 07:18:43 daniel Exp $
 ------------
